[FIX] fixed kanban view dropdown menu color picker options
Before this commit, kanban dropdown menu layout breaks

--- a/addons/web/static/src/scss/kanban_dashboard.scss
+++ b/addons/web/static/src/scss/kanban_dashboard.scss
@@ -95,12 +95,11 @@
                     }
 
                     // Default options box
-                    div.text-right {
-                        text-align: left; // :/
+                    div.o_right_menu {
                         @include o-kanban-dashboard-dropdown-link(0);
                         > a {
-                            margin-left: 40px;
-                            padding-left: 20px;
+                            margin-left: 10px;
+                            text-align: center;
                         }
                     }
                 }
